projekt-compiler/test/builtInCommand/list/fail/s_breakup1.rail
$'main'(--):
 \
  \
   \
    \---n---[b]:---[c]:---~-o--[d]:----#
